samples/_failures_safe/1761721821_891bc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25e6801b.c: In function ‘print_errors’:
./samples/SAFE/__tmp_25e6801b.c:121:13: error: expected identifier at end of input
  121 |             printf("[%s] %s: %s\n", analyzer->
      |             ^~~~~~
./samples/SAFE/__tmp_25e6801b.c:121:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25e6801b.c:121:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25e6801b.c:121:13: error: expected declaration or statement at end of input
